# saas-middleware-sdk

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  feature.md  tasks.md
.github/workflows/: workflow.yml
adapters/sdk/: helpers.py
examples/adapters/proc_example/: descriptor.json  processor.py
examples/applications/: example_api.py  example_app.py  example_app1.py  example_app2.py  example_sdk.py
relay/: checks.py  cli.py  meta.py  server.py
saas/: _meta.py  exceptions.py  helpers.py
saas/core/: assets.py  eckeypair.py  exceptions.py  helpers.py  identity.py  keypair.py  keystore.py  rsakeypair.py  schemas.py
saas/cryptography/: eckeypair.py  exceptions.py  keypair.py  rsakeypair.py
saas/dor/: proxy.py  schemas.py
saas/keystore/: asset.py  exceptions.py  identity.py  keystore.py  schemas.py
saas/keystore/assets/: contentkeys.py  (+2 more)
saas/nodedb/: proxy.py  schemas.py
saas/rest/: exceptions.py  proxy.py  schemas.py  service.py
saas/rti/: proxy.py  schemas.py
saas/sdk/: base.py  dot.py  helper.py
saasadapters/example/: descriptor.json  processor.py
saasadapters/example2/: descriptor.json  processor.py
saascore/: exceptions.py  helpers.py  log.py
saascore/cryptography/: eckeypair.py  exceptions.py  helpers.py  keypair.py  rsakeypair.py
saascore/keystore/: asset.py  exceptions.py  identity.py  keystore.py  schemas.py
tests/: test_cryptography.py  test_keystore.py  test_logging.py  test_sdk_app.py  test_sdk_auth.py  test_sdk_base.py  test_sdk_relay.py
(+17 files in other folders)
