[metadata]
# replace with your username:
name = saas-middleware-sdk
version = 1.0.0
description = Simulation-as-a-Service (SaaS) Middleware SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cooling-singapore/saas-middleware-sdk
project_urls =
    Bug Tracker = https://github.com/cooling-singapore/saas-middleware-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cryptography
    flask
    requests
    canonicaljson
    pydantic
    jsonschema
